# Eigen-AMGX

./: CMakeLists.txt  README.md
example/: test.cpp
include/: cudaSolver.h  transMatrix.h
src/: cudaSolver.cpp  cudaSolver.cu  transMatrix.cpp
